--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {
-  margin: 0;
+body{
+  margin:0;
+  padding:0;
 }
 
 main {
@@ -9,4 +10,31 @@ main {
 
 canvas {
   border: 3px solid #ff5722;
+}
+
+div#cover {
+  display: flex;
+  position:fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: #607d8b;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 15px solid #00BCD4;
+  border-bottom: 15px solid #FF9800;
+  width: 120px;
+  height: 120px;
+  margin: auto;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
