--- a/style.css
+++ b/style.css
@@ -31,7 +31,14 @@ div#cover {
   width: 120px;
   height: 120px;
   margin: auto;
+  -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+  z-index: 2;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
 @keyframes spin {
