--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
   margin:0;
   padding:0;
-  background: #ff5722;
+  background: #607d8b;
   display: flex;
 }
 
 canvas {
-  border: 2px solid #ff5722;
+  border: 2px solid #9e9e9e;
   background: white;
   margin: auto;
 }
